* clsVersion.cs: New version command.
* clsBotClient.cs: Add update notification

* entrypoint.sh:
* TFA-Bot.csproj:

* clsVersionControl.cs: Basic Version Control complete

--- a/TFA-Bot/TFA-Bot.csproj
+++ b/TFA-Bot/TFA-Bot.csproj
@@ -114,6 +114,7 @@
     <Compile Include="DiscordBot\Commands\clsBotControl.cs" />
     <Compile Include="DiscordBot\Commands\clsHelp.cs" />
     <Compile Include="clsVersionControl.cs" />
+    <Compile Include="DiscordBot\Commands\clsVersion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
