--- a/TFA-Bot/TFA-Bot.csproj
+++ b/TFA-Bot/TFA-Bot.csproj
@@ -86,7 +86,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\clsRollingAverage.cs" />
     <Compile Include="Utils\clsExtentions.cs" />
-    <Compile Include="clsCaller.cs" />
     <Compile Include="clsAlarm.cs" />
     <Compile Include="Spreadsheet\clsSpreadsheet.cs" />
     <Compile Include="Spreadsheet\ASheetColumnHeader.cs" />
@@ -115,6 +114,11 @@
     <Compile Include="DiscordBot\Commands\clsHelp.cs" />
     <Compile Include="clsVersionControl.cs" />
     <Compile Include="DiscordBot\Commands\clsVersion.cs" />
+    <Compile Include="DiscordBot\Commands\clsMTR.cs" />
+    <Compile Include="Dialler\clsDialler.cs" />
+    <Compile Include="Dialler\IDialler.cs" />
+    <Compile Include="Dialler\clsDiallerSIP.cs" />
+    <Compile Include="Dialler\clsDiallerTwilio.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -126,6 +130,7 @@
     <Folder Include="Utils\" />
     <Folder Include="Spreadsheet\" />
     <Folder Include="DataClasses\" />
+    <Folder Include="Dialler\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\dialplan.xml">
