* clsGit.cs: * clsGitHead.cs: * clsGitBranchInfo.cs: * clsGitCommand.cs: New Git feature code
* Program.cs:
* TFA-Bot.csproj:
* clsBotClient.cs:
* clsVersion.cs: Changed for git integration.

* clsColumnDisplay.cs: New Column Display class to help displaying
  tables in Discord.

* clsVersionControl.cs: No need for this anymore

* packages.config: Added gitlib2sharp

* entrypoint.sh: Remove git version args

--- a/TFA-Bot/TFA-Bot.csproj
+++ b/TFA-Bot/TFA-Bot.csproj
@@ -1,4 +1,5 @@
 ﻿<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\LibGit2Sharp.NativeBinaries.1.0.217\build\net461\LibGit2Sharp.NativeBinaries.props" Condition="Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.217\build\net461\LibGit2Sharp.NativeBinaries.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -80,6 +81,9 @@
     <Reference Include="websocket-sharp">
       <HintPath>bin\Debug\websocket-sharp.dll</HintPath>
     </Reference>
+    <Reference Include="LibGit2Sharp">
+      <HintPath>..\packages\LibGit2Sharp.0.25.2\lib\netstandard2.0\LibGit2Sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -112,13 +116,17 @@
     <Compile Include="DiscordBot\Commands\clsCall.cs" />
     <Compile Include="DiscordBot\Commands\clsBotControl.cs" />
     <Compile Include="DiscordBot\Commands\clsHelp.cs" />
-    <Compile Include="clsVersionControl.cs" />
     <Compile Include="DiscordBot\Commands\clsVersion.cs" />
     <Compile Include="DiscordBot\Commands\clsMTR.cs" />
     <Compile Include="Dialler\clsDialler.cs" />
     <Compile Include="Dialler\IDialler.cs" />
     <Compile Include="Dialler\clsDiallerSIP.cs" />
     <Compile Include="Dialler\clsDiallerTwilio.cs" />
+    <Compile Include="Git\clsGit.cs" />
+    <Compile Include="Git\clsGitBranchInfo.cs" />
+    <Compile Include="clsColumnDisplay.cs" />
+    <Compile Include="DiscordBot\Commands\clsGitCommand.cs" />
+    <Compile Include="Git\clsGitHead.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -131,6 +139,7 @@
     <Folder Include="Spreadsheet\" />
     <Folder Include="DataClasses\" />
     <Folder Include="Dialler\" />
+    <Folder Include="Git\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\dialplan.xml">
