* TFA-Bot.csproj: * AssemblyGitCommit.cs: * AssemblyInfo.cs: * clsGitCommand.cs: Add AssemblyGitCommit
* clsColumnDisplay.cs: Fix display

--- a/TFA-Bot/TFA-Bot.csproj
+++ b/TFA-Bot/TFA-Bot.csproj
@@ -127,7 +127,7 @@
     <Compile Include="clsColumnDisplay.cs" />
     <Compile Include="DiscordBot\Commands\clsGitCommand.cs" />
     <Compile Include="Git\clsGitHead.cs" />
-    <Compile Include="Git\GitCommit.cs" />
+    <Compile Include="Git\AssemblyGitCommit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
