--- a/TFA-Bot/TFA-Bot.csproj
+++ b/TFA-Bot/TFA-Bot.csproj
@@ -149,4 +149,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Mono.Posix.5.4.0.201\build\net45\Mono.Posix.targets" Condition="Exists('..\packages\Mono.Posix.5.4.0.201\build\net45\Mono.Posix.targets')" />
+  <Target Name="BeforeBuild" >
+    <Message Text="Updating AssemblyGitCommit to $(GitCommit)"></Message>
+    <AssemblyInfo AssemblyGitCommit="$(GitCommit)">
+    </AssemblyInfo>
+  </Target>
 </Project>
