--- a/BuildCommon.targets
+++ b/BuildCommon.targets
@@ -6,7 +6,7 @@
         $(CompileDependsOn);
     </CompileDependsOn>
 </PropertyGroup>
-<Target Name="CommonBuildDefineModifiedAssemblyVersion" Condition="'$(VersionAssembly)' != ''">
+<Target Name="CommonBuildDefineModifiedAssemblyVersion" Condition="'$(GitCommit)' != ''">
     <!-- Find AssemblyInfo.cs or AssemblyInfo.vb in the "Compile" Items. Remove it from "Compile" Items because we will use a modified version instead. -->
     <ItemGroup>
         <OriginalAssemblyInfo Include="@(Compile)" Condition="%(Filename) == 'AssemblyInfo' And (%(Extension) == '.vb' Or %(Extension) == '.cs')" />
@@ -18,11 +18,10 @@
           DestinationFiles="@(OriginalAssemblyInfo->'$(IntermediateOutputPath)%(Identity)')">
         <Output TaskParameter="DestinationFiles" ItemName="ModifiedAssemblyInfo"/>
     </Copy>
-    <!-- Replace the version bit (in AssemblyVersion and AssemblyFileVersion attributes) using regular expression. Use the defined property: $(VersionAssembly). -->
-    <Message Text="Setting AssemblyVersion to $(VersionAssembly)" />
+    <!-- Replace the version bit (in AssemblyVersion and AssemblyFileVersion attributes) using regular expression. Use the defined property: $(GitCommit). -->
+    <Message Text="Setting GitCommit to $(GitCommit)" />
     <RegexUpdateFile Files="@(ModifiedAssemblyInfo)"
-                Regex="Version\(&quot;(\d+)\.(\d+)(\.(\d+)\.(\d+)|\.*)&quot;\)"
-                ReplacementText="Version(&quot;$(VersionAssembly)&quot;)"
+                GitHash="$(GitCommit)"
                 />
     <!-- Include the modified AssemblyInfo.cs/.vb file in "Compile" items (instead of the original). -->
     <ItemGroup>
@@ -33,8 +32,7 @@
 <UsingTask TaskName="RegexUpdateFile" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll">
     <ParameterGroup>
         <Files ParameterType="Microsoft.Build.Framework.ITaskItem[]" Required="true" />
-        <Regex ParameterType="System.String" Required="true" />
-        <ReplacementText ParameterType="System.String" Required="true" />
+        <GitHash ParameterType="System.String" Required="true" />
     </ParameterGroup>
     <Task>
         <Reference Include="System.Core" />
@@ -46,15 +44,15 @@
         <Code Type="Fragment" Language="cs">
             <![CDATA[
             try {
-                var rx = new System.Text.RegularExpressions.Regex(this.Regex);
                 for (int i = 0; i < Files.Length; ++i)
                 {
                     var path = Files[i].GetMetadata("FullPath");
                     if (!File.Exists(path)) continue;
 
-                    var txt = File.ReadAllText(path);
-                    txt = rx.Replace(txt, this.ReplacementText);
-                    File.WriteAllText(path, txt);
+                    using (StreamWriter sw = File.AppendText(path)) 
+                    {
+                      sw.WriteLine($"[assembly: AssemblyGitCommit(\"{GitHash}\")]");
+                    } 
                 }
                 return true;
             }
