* TFA-Bot.csproj: * clsGitCommand.cs: * clsBotControl.cs: Add debug support
* clsGit.cs:
* clsVersion.cs:
* clsGitHead.cs:
* clsBotClient.cs: Separate version from git

* Program.cs: Update version control

--- a/TFA-Bot/TFA-Bot.csproj
+++ b/TFA-Bot/TFA-Bot.csproj
@@ -128,6 +128,7 @@
     <Compile Include="DiscordBot\Commands\clsGitCommand.cs" />
     <Compile Include="Git\clsGitHead.cs" />
     <Compile Include="Git\AssemblyGitCommit.cs" />
+    <Compile Include="clsVersion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
