* clsNetwork.cs: Add average block time
* clsNetworks.cs: Add new "networks" command.

* clsBotClient.cs: Refactor var

* TFA-Bot.csproj: Add new "networks" command

* clsRollingAverage.cs: Add Count to average class.

* clsExtenstions.cs: Add new timespan display

--- a/TFA-Bot/TFA-Bot.csproj
+++ b/TFA-Bot/TFA-Bot.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Git\clsGitHead.cs" />
     <Compile Include="Git\AssemblyGitCommit.cs" />
     <Compile Include="clsVersion.cs" />
+    <Compile Include="DiscordBot\Commands\clsNetworks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
