--- a/TFA-Bot/packages.config
+++ b/TFA-Bot/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.2" targetFramework="net462" />
   <package id="DSharpPlus" version="3.2.3" targetFramework="net462" />
   <package id="DSharpPlus.CommandsNext" version="3.2.3" targetFramework="net462" />
   <package id="DSharpPlus.Interactivity" version="3.2.3" targetFramework="net462" />
   <package id="DSharpPlus.WebSocket.WebSocketSharp" version="3.2.3" targetFramework="net462" />
   <package id="LibGit2Sharp" version="0.25.2" targetFramework="net462" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.217" targetFramework="net462" />
+  <package id="MailKit" version="2.0.6" targetFramework="net462" />
+  <package id="MimeKit" version="2.0.6" targetFramework="net462" />
   <package id="Mono.Posix" version="5.4.0.201" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="RestSharp" version="106.3.1" targetFramework="net462" />
